<resources>
    <string name="app_name">Remote Switch</string>
    <string name="action_settings">Settings</string>
    <string name="preferenceS1On">SwitchOne ON URL</string>
    <string name="preferenceS1OnTitle">SwitchOne ON</string>
    <string name="preferenceS1Off">SwitchOne OFF URL</string>
    <string name="preferenceS1OffTitle">SwitchOne OFF</string>
    <string name="preferenceS1Id">SwitchOne ID</string>
    <string name="preferenceS1IdTitle">SwitchOne ID</string>

    <string name="preferenceS2On">SwitchTwo ON URL</string>
    <string name="preferenceS2OnTitle">SwitchTwo ON</string>
    <string name="preferenceS2Off">SwitchTwo OFF URL</string>
    <string name="preferenceS2OffTitle">SwitchTwo OFF</string>
    <string name="preferenceS2Id">SwitchTwo ID</string>
    <string name="preferenceS2IdTitle">SwitchTwo ID</string>

    <string name="preferenceSwitchStatus">Switch Status URL</string>
    <string name="preferenceSwitchStatusTitle">Switch Status</string>

    <string name="SwitchOneCategory">Switch One</string>
    <string name="SwitchTwoCategory">Switch Two</string>
    <string name="SwitchGeneral">General</string>
</resources>
